spotless fix